# SuperImage

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
.github/: telegram.py
.github/workflows/: release.yml  telegram.yml
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/: strings.xml
app/src/main/res/drawable/: ic_arrow_back_24.xml  ic_arrow_clockwise_24.xml  ic_exclamation_octagon_24.xml  ic_gear_24.xml  ic_github_24.xml  ic_image_24.xml  ic_laptop_24.xml  ic_moon_stars_24.xml  ic_patreon_24.xml  ic_sun_24.xml  ic_telegram_24.xml  outline_auto_awesome_24.xml  outline_photo_size_select_large_24.xml  round_keyboard_arrow_down_24.xml  splash_logo.xml
app/src/main/res/drawable-anydpi-v26/: ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: AndroidBuildFlavours.kt
common/: build.gradle
decompose/: build.gradle.kts
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
playstore/: build.gradle.kts
playstore/base/: build.gradle.kts
playstore/impl/: build.gradle.kts
playstore/no-op/: build.gradle.kts
playstore/no-op/src/main/: AndroidManifest.xml
realesrgan/: build.gradle  proguard-rules.pro
realesrgan/android/: build.gradle  proguard-rules.pro
realesrgan/android/src/main/: AndroidManifest.xml
realesrgan/core/: .gitignore  CMakeLists.txt  coroutine_utils.cpp  image_dimensions.h  image_tile_interpreter.cpp  image_tile_interpreter.h  mnn_model.cpp  upscaling.cpp  upscaling.h
realesrgan/core/android/: bitmap_utils.cpp  bitmap_utils.h  realesrgan_jni.cpp
realesrgan/core/desktop/: image_utils.cpp  image_utils.h  realesrgan_jni.cpp
realesrgan/core/jni_common/: progress_tracker.cpp  progress_tracker.h
realesrgan/src/main/cpp/: CMakeLists.txt  bitmap_utils.h  coroutine_utils.h  image_tile_interpreter.cpp  image_tile_interpreter.h  logging.h  mnn_model.h  progress_tracker.cpp  progress_tracker.h  realesrgan.cpp  realesrgan.h  realesrgan_jni.cpp  upscaling.cpp  upscaling.h
shared/: build.gradle.kts
(+135 files in other folders)
